    - fixed some false memory pointer
    - pass import paths from prerequisite projects to semantic analysis, too
  * full installer now bundled with DMD 2.106.0 and LDC 1.35.0
  * fixed issue 23734: avoid exception by std.file.isDir when clicking a project folder that doesn't exist
  * added separate version of dbuild.dll linked against Microsoft.Build.CPPTasks.Common for VS 17.5 - 17.9
  * updated dfmt library from upstream
  * improved message when dmd crashes
  * "add imports from dependent projects" is now evaluated recursively and passed to semantic analysis
  * added support for compiler option -preview=shortenedMethods
  * fixed issue #264: VisualD doesn't run compiled executable, when I select "Compile and Run" option

2024-02-25 version 1.4.0-rc1
  * dmdserver: updated to frontend of DMD 2.107.0
  * full installer now bundled with DMD 2.107.0 and LDC 1.36.0
  * mago: fix crash due to changed return values from IDiaSession in VS2022, probably fixes
    issue #261
  * fixed issue #269: avoid BOM in response file if system codepage is UTF-8
  * project template cache now removed if Visual D does not find itself in it. Workaround for
    issue #256
  * fixed some version inaccuracies in installation files

2024-07-29 version 1.4.0-rc2
  * updated to frontend of DMD 2.110.0-beta1
  * full installer now bundled with DMD 2.109.1 and LDC 1.39.0
  * added separate version of dbuild.dll linked against Microsoft.Build.CPPTasks.Common for VS 17.10 - 17.11
  * fixed detecting dmd update after 2.108

2024-10-20 version 1.4.0-rc3
  * fixed issue #279: mago: display void[] as ubyte[] in the debugger
  * fixed issue #281: mago: dereference pointer with '.' for arrays, too
  * updated to build with dmd-2.110
  * fixed completion for fields/members of class/struct fields
  * fixed crash if source window closed before semantic analysis callback completed
  * dmdserver: log communication with Visual D to %TEMP%/dmdserver if that folder exists