@@ -379,7 +379,7 @@
 
   <Target Name="Versioned_ComputeLinkImportLibraryOutputsForClean"
           DependsOnTargets="ComputeLinkImportLibraryOutputsForClean"
-          Condition="'$(DBuildVersion)' != '17.9' and '$(DBuildVersion)' != '17.10' and '$(DBuildVersion)' != '17.11'">
+          Condition="'$(MSBuildVersion_Major)' &lt; '17' or ('$(MSBuildVersion_Major)' == '17' and '$(MSBuildVersion_Minor)' &lt; '9')">
   </Target>
 
   <!-- changing attributes on link options must be applied to all object files (including C++), so we insert
