@@ -346,6 +346,7 @@ Section "Visual Studio package" SecPackage
   ${File} ..\msbuild\dbuild\obj\release-v17_9\ dbuild.17.9.dll
   ${File} ..\msbuild\dbuild\obj\release-v17_10\ dbuild.17.10.dll
   ${File} ..\msbuild\dbuild\obj\release-v17_11\ dbuild.17.11.dll
+  ${File} ..\msbuild\dbuild\obj\release-v17_12\ dbuild.17.12.dll
 !endif
   WriteRegStr HKLM "Software\${APPNAME}" "msbuild" $INSTDIR\msbuild
 !endif
