@@ -26,6 +26,8 @@ static import std.file;
 
 import stdext.string : decodeDmdString;
 
+pragma(lib, "user32");
+
 // version = pipeLink; // define to forward arguments to link.exe and demangle its output
 version = MSLinkFormat;
 
